# smart-network-mapper

./: .dockerignore  .env.example  .gitignore  .style.yapf  Dockerfile  INSTALL_WINDOWS.txt  LICENSE  README.md  app.py  build.bat  build.spec  download_models.py  flask_server.py  install.sh  justfile  launcher.py  main.py  model_downloader_gui.py  package_release.bat  pyi_rth_snm_stdio.py  pyproject.toml  recapitulatif_projet.md  requirements.txt  snm_paths.py  test_groq.py  upload_windows_release.py
..bfg-report/2026-04-30/10-01-49/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
build_tools/: build.bat  build.spec  package_release.bat  upload_windows_release.py
cli/: main.py  run_scan.py
core/: app.py  env.py  launcher.py  paths.py
gui/: __init__.py  constants.py  db.py
gui/pages/: __init__.py  about.py  dashboard.py  history.py  new_scan.py  results.py
model/: __init__.py  code_training.py  download_models.py  feature_names.pkl  model_download.py  model_downloader_gui.py  normalize_data.py  predictor.py  quantile_transformer.pkl  scaler.pkl
outputs/: scan_result.json
reporter/: ai_generator.py  html_generator.py  telegram_utils.py
resources/: iana_ports_cache.json
scanner/: constants.py  device_info.py  host_discovery.py  iana_manager.py  osint_enricher.py  port_scanner.py  utils.py
tests/: last_test_output.txt  test_ai_generator.py  test_db.py  test_device_info.py  test_groq_standalone.py  test_host_discovery.py  test_html_generator.py  test_iana_manager.py  test_model_download.py  test_model_reliability.py  test_osint_enricher.py  test_port_scanner.py  test_run_scan_errors.py  test_snm_env.py  test_snm_paths.py  test_telegram_utils.py  test_udp_scanner.py
workflow/: SNM_n8n_workflow_template.json  patch_workflow_errors.py  patch_workflow_if_fix.py  start-n8n.ps1
workflow/n8n_js/: discover_network.js  scan_target.js  split_ai_report.js  telegram_chat_id_expression.txt
